--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
     }
   </style>
 
-  <link rel="icon" href="">
+  <link rel="icon" href="images/icon.jpg">
 </head>
 <body>
   <div id="canvas-container">
