--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
     }
 
     #board {
-      background-image: url("");
+      background-image: url("images/background.png");
 
       height: 100%;
 
