--- a/game.html
+++ b/game.html
@@ -37,6 +37,10 @@
   </div>
 
   <script src="board.js"></script>
+  <script src="enemies.js"></script>
+  <script src="units.js"></script>
+
+  <script src="init.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
