--- a/game.html
+++ b/game.html
@@ -37,8 +37,11 @@
   </div>
 
   <script src="board.js"></script>
+  <script src="player.js"></script>
   <script src="enemies.js"></script>
   <script src="units.js"></script>
+  <script src="eventListeners.js"></script>
+  <script src="funcs.js"></script>
 
   <script src="init.js"></script>
   <script src="game.js"></script>
