changed image links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <title>Home</title>
+  <link href="/main.css" type="stylesheet">
 </head>
 <body>
-  <h1>Gunn Hacks Project</h1>
-  <a href = "/game">Tower Defense</a>
+  <h1><center>Welcome to Our GunnHacks 5.0 Project!</center></h1>
+  <p><center>Made by Grant, Nico and Daniel. Click on the link below to see our project!</center></p>
+  <a href = "/game"><center><h2>Tower Defense</h2><center></a>
 
   <script src="testClass.js"></script>
   <script src="testFunction.js"></script>
