--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <html>
 <head>
   <title>Home</title>
-  <link href="/main.css" type="stylesheet">
+  <base href="/">
+  <link rel="stylesheet" type="text/css" href="/main.css">
+  <style>
+  h1 {
+    border: 2px solid blue;
+    padding: 30px;
+  }
 
+  * {
+    box-sizing: border-box;
+  }
+
+  .column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  </style>
 </head>
-<body background = "MANBAckground.png">
 
-  <h1><center>Welcome to Our GunnHacks 5.0 Project!</center></h1>
+<body style="background-image:url('https://cdn.discordapp.com/attachments/445304781460865059/549038215873691680/background1.png');">
+
+  <h1 style="background-color:DodgerBlue;"><center>Welcome to Our GunnHacks 5.0 Project!</center></h1>
   <p><center>Made by Grant, Nico and Daniel. Click on the link below to see our project!</center></p>
 
-  <a href = "/game"><center><h2>Tower Defense</h2><center></a>
+  <div class="row">
+    <div class="column">
+      <img src= "https://cdn.discordapp.com/attachments/445304781460865059/549041212968009730/HOT.png" alt="Towers" width="500" height="250">
+    </div>
+    <div class="column">
+      <img src= "https://cdn.discordapp.com/attachments/445304781460865059/549040701795467274/HOTTER.png" alt="Enemies" width="500" height="260">
+    </div>
+  </div>
+
+
+
+  <a href = "/game"><center><h2 style="background-color:Green;">Tower Defense</h2><center></a>
 
   <script src="testClass.js"></script>
   <script src="testFunction.js"></script>
